namespace RegisterMe.Domain.Constants;

public abstract class Roles
{
    public const string Administrator = nameof(Administrator);
    public const string OrganizationAdministrator = nameof(OrganizationAdministrator);
    public const string Exhibitor = nameof(Exhibitor);
}
